--- a/css/datepicker.css
+++ b/css/datepicker.css
@@ -144,7 +144,7 @@
 
 .datepicker-panel > ul > li.muted,
 .datepicker-panel > ul > li.muted:hover {
-  color: #999;
+  color: #999 !important; 
 }
 
 .datepicker-panel > ul > li.highlighted {
@@ -162,14 +162,14 @@
 
 .datepicker-panel > ul > li.disabled,
 .datepicker-panel > ul > li.disabled:hover {
-  background-color: #fff;
-  color: #ccc;
+  background-color: #fff !important;
+  color: #ccc !important;
   cursor: default;
 }
 
 .datepicker-panel > ul > li.disabled.highlighted,
 .datepicker-panel > ul > li.disabled:hover.highlighted {
-  background-color: rgb(229, 242, 255);
+  background-color: rgb(229, 242, 255) !important;
 }
 
 .datepicker-panel > ul > li[data-view="years prev"],
